--- a/public/index.html
+++ b/public/index.html
@@ -939,36 +939,288 @@
     // Загрузка активных событий для выбора
     async function loadActiveEvents() {
         try {
-            const response = await fetch('/api/visitors/events/active');
-            const data = await response.json();
+            console.log('🔄 Загрузка активных событий...');
+
+            const response = await fetch('/api/visitors/events/active', {
+                method: 'GET',
+                credentials: 'include',
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                }
+            });
+
+            console.log('📡 Ответ сервера на запрос событий:', {
+                status: response.status,
+                statusText: response.statusText,
+                headers: Object.fromEntries(response.headers.entries())
+            });
 
             if (!response.ok) {
-                throw new Error(data.error);
+                const errorText = await response.text();
+                console.error('❌ Ошибка ответа сервера:', errorText);
+
+                if (response.status === 401) {
+                    console.log('🔑 Проблема с авторизацией, перенаправление на логин');
+                    window.location.href = '/login';
+                    return;
+                }
+
+                if (response.status === 404) {
+                    console.error('🔍 Маршрут /api/visitors/events/active не найден');
+                    showAlert('error', 'Маршрут для загрузки событий не найден. Проверьте, что сервер обновлен.');
+                    return;
+                }
+
+                throw new Error(`HTTP ${response.status}: ${errorText}`);
+            }
+
+            const data = await response.json();
+            console.log('📊 Полученные данные событий:', data);
+
+            if (!data.events || !Array.isArray(data.events)) {
+                console.error('❌ Неверный формат данных событий:', data);
+                throw new Error('Сервер вернул неверный формат данных событий');
             }
 
             activeEvents = data.events;
+            console.log(`✅ Загружено ${activeEvents.length} активных событий`);
 
-            // Обновляем выпадающий список событий
-            const eventSelect = document.getElementById('event-select');
-            const eventFilter = document.getElementById('event-filter');
+            // Обновляем выпадающие списки
+            updateEventSelectors();
 
-            eventSelect.innerHTML = '<option value="">Выберите событие</option>';
-            eventFilter.innerHTML = '<option value="">Все события</option>';
-
-            activeEvents.forEach(event => {
-                const option = new Option(
-                    `${event.name} (${new Date(event.start_date).toLocaleDateString()})`,
-                    event.id
-                );
-                eventSelect.appendChild(option.cloneNode(true));
-                eventFilter.appendChild(option);
-            });
+            // Показываем информацию пользователю
+            if (activeEvents.length === 0) {
+                showAlert('warning', 'Нет активных событий. Создайте событие в разделе "События".');
+            } else {
+                console.log(`✅ Доступно ${activeEvents.length} событий для выбора`);
+            }
 
         } catch (err) {
-            console.error('Ошибка загрузки активных событий:', err);
-            showAlert('error', 'Ошибка загрузки списка событий');
+            console.error('❌ Ошибка загрузки активных событий:', err);
+
+            // Детальная диагностика ошибки
+            if (err.message.includes('Failed to fetch') || err.message.includes('NetworkError')) {
+                showAlert('error', 'Ошибка сети. Проверьте подключение к серверу.');
+            } else if (err.message.includes('не найден')) {
+                showAlert('error', 'Функция загрузки событий недоступна. Возможно, сервер не обновлен.');
+            } else {
+                showAlert('error', `Ошибка загрузки событий: ${err.message}`);
+            }
+
+            // Создаем пустой список событий для предотвращения ошибок
+            activeEvents = [];
+            updateEventSelectors();
         }
     }
+
+    // Функция обновления селекторов событий
+    function updateEventSelectors() {
+        const eventSelect = document.getElementById('event-select');
+        const eventFilter = document.getElementById('event-filter');
+
+        if (!eventSelect || !eventFilter) {
+            console.error('❌ Не найдены элементы селекторов событий');
+            return;
+        }
+
+        // Очищаем и заполняем селектор для добавления посетителя
+        eventSelect.innerHTML = '<option value="">Выберите событие</option>';
+
+        // Очищаем и заполняем фильтр
+        eventFilter.innerHTML = '<option value="">Все события</option>';
+
+        if (activeEvents.length === 0) {
+            // Добавляем опцию для создания события
+            const noEventsOption = new Option('❌ Нет активных событий - создайте событие', '');
+            noEventsOption.disabled = true;
+            eventSelect.appendChild(noEventsOption);
+
+            console.log('⚠️ Селекторы обновлены: нет активных событий');
+            return;
+        }
+
+        // Заполняем селекторы событиями
+        activeEvents.forEach(event => {
+            const startDate = new Date(event.start_date).toLocaleDateString('ru-RU');
+            const endDate = new Date(event.end_date).toLocaleDateString('ru-RU');
+
+            let optionText = event.name;
+            if (startDate === endDate) {
+                optionText += ` (${startDate})`;
+            } else {
+                optionText += ` (${startDate} - ${endDate})`;
+            }
+
+            // Для селектора добавления посетителя
+            const addOption = new Option(optionText, event.id);
+            eventSelect.appendChild(addOption);
+
+            // Для фильтра
+            const filterOption = new Option(optionText, event.id);
+            eventFilter.appendChild(filterOption);
+        });
+
+        console.log(`✅ Селекторы событий обновлены: ${activeEvents.length} событий`);
+    }
+
+    // Функция создания тестового события (если нет событий)
+    async function createTestEvent() {
+        try {
+            console.log('🎯 Создание тестового события...');
+
+            const testEvent = {
+                name: 'Тестовое событие',
+                description: 'Автоматически созданное событие для тестирования',
+                start_date: new Date().toISOString().split('T')[0], // Сегодня
+                end_date: new Date(Date.now() + 7 * 24 * 60 * 60 * 1000).toISOString().split('T')[0], // +7 дней
+                location: 'Тестовая локация',
+                registration_required: false
+            };
+
+            const response = await fetch('/api/events', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                credentials: 'include',
+                body: JSON.stringify(testEvent)
+            });
+
+            if (response.ok) {
+                const data = await response.json();
+                console.log('✅ Тестовое событие создано:', data);
+                showAlert('success', 'Создано тестовое событие. Перезагружаем список...');
+
+                // Перезагружаем события
+                await loadActiveEvents();
+            } else {
+                const error = await response.text();
+                console.error('❌ Ошибка создания тестового события:', error);
+                throw new Error(error);
+            }
+
+        } catch (err) {
+            console.error('❌ Не удалось создать тестовое событие:', err);
+            showAlert('error', 'Не удалось создать тестовое событие. Создайте событие вручную в разделе "События".');
+        }
+    }
+
+    // Функция диагностики API событий
+    async function diagnoseEventsAPI() {
+        console.log('🔍 Диагностика API событий...');
+
+        const endpoints = [
+            '/api/events',
+            '/api/visitors/events/active',
+            '/api/admin/health'
+        ];
+
+        for (const endpoint of endpoints) {
+            try {
+                console.log(`   Проверяем ${endpoint}...`);
+                const response = await fetch(endpoint, { credentials: 'include' });
+                console.log(`   ${endpoint}: ${response.status} ${response.statusText}`);
+
+                if (endpoint === '/api/admin/health' && response.ok) {
+                    const health = await response.json();
+                    console.log('   Здоровье системы:', health);
+                }
+            } catch (err) {
+                console.log(`   ${endpoint}: ❌ ${err.message}`);
+            }
+        }
+    }
+
+    // Улучшенная обработка формы посетителя с проверкой события
+    function enhanceVisitorForm() {
+        const visitorForm = document.getElementById('visitor-form');
+        const eventSelect = document.getElementById('event-select');
+
+        if (!visitorForm || !eventSelect) {
+            console.error('❌ Форма посетителя или селектор событий не найден');
+            return;
+        }
+
+        // Добавляем валидацию события при отправке формы
+        visitorForm.addEventListener('submit', async (e) => {
+            const selectedEventId = eventSelect.value;
+
+            if (!selectedEventId) {
+                e.preventDefault();
+
+                // Проверяем, есть ли события вообще
+                if (activeEvents.length === 0) {
+                    const createEvent = confirm(
+                        'Нет доступных событий для выбора.\n\n' +
+                        'Хотите создать тестовое событие автоматически?\n\n' +
+                        'Или перейдите в раздел "События" чтобы создать событие вручную.'
+                    );
+
+                    if (createEvent) {
+                        await createTestEvent();
+                    } else {
+                        showAlert('warning', 'Перейдите в раздел "События" и создайте событие');
+                        showTab('events');
+                    }
+                } else {
+                    showAlert('error', 'Необходимо выбрать событие для посетителя');
+                    eventSelect.focus();
+                }
+
+                return false;
+            }
+        });
+
+        console.log('✅ Форма посетителя улучшена проверкой событий');
+    }
+
+    // Функция для отображения кнопки диагностики
+    function addDiagnosticsButton() {
+        const addVisitorTab = document.getElementById('add-visitor');
+        if (!addVisitorTab) return;
+
+        // Проверяем, есть ли уже кнопка
+        if (document.getElementById('diagnose-events-btn')) return;
+
+        const diagnosticsHTML = `
+        <div style="margin-top: 20px; padding: 15px; background: #f8f9fa; border-radius: 8px; border-left: 4px solid #17a2b8;">
+            <h4 style="color: #17a2b8; margin-bottom: 10px;">🔧 Диагностика событий</h4>
+            <p style="margin-bottom: 15px; color: #666;">Если не удается выбрать событие:</p>
+            <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+                <button type="button" id="diagnose-events-btn" class="btn-secondary">
+                    🔍 Диагностировать API
+                </button>
+                <button type="button" id="reload-events-btn" class="btn-secondary">
+                    🔄 Перезагрузить события
+                </button>
+                <button type="button" id="create-test-event-btn" class="btn-success">
+                    ➕ Создать тестовое событие
+                </button>
+            </div>
+        </div>
+    `;
+
+        addVisitorTab.insertAdjacentHTML('beforeend', diagnosticsHTML);
+
+        // Добавляем обработчики
+        document.getElementById('diagnose-events-btn').addEventListener('click', diagnoseEventsAPI);
+        document.getElementById('reload-events-btn').addEventListener('click', loadActiveEvents);
+        document.getElementById('create-test-event-btn').addEventListener('click', createTestEvent);
+
+        console.log('✅ Кнопки диагностики добавлены');
+    }
+
+    // Инициализация улучшений при загрузке страницы
+    document.addEventListener('DOMContentLoaded', () => {
+        // Добавляем улучшения через небольшую задержку
+        setTimeout(() => {
+            enhanceVisitorForm();
+            addDiagnosticsButton();
+        }, 1000);
+    });
+
+    console.log('🔧 Диагностические функции для событий загружены');
 
     // Поиск посетителей
     function searchVisitors() {
