--- a/public/index.html
+++ b/public/index.html
@@ -939,78 +939,37 @@
     // Загрузка активных событий для выбора
     async function loadActiveEvents() {
         try {
-            console.log('🔄 Загрузка активных событий...');
-
-            const response = await fetch('/api/visitors/events/active', {
-                method: 'GET',
-                credentials: 'include',
-                headers: {
-                    'Accept': 'application/json',
-                    'Content-Type': 'application/json'
-                }
-            });
-
-            console.log('📡 Ответ сервера на запрос событий:', {
-                status: response.status,
-                statusText: response.statusText,
-                headers: Object.fromEntries(response.headers.entries())
-            });
+            const response = await fetch('/api/visitors/events/active');
+            const data = await response.json();
 
             if (!response.ok) {
-                const errorText = await response.text();
-                console.error('❌ Ошибка ответа сервера:', errorText);
-
-                if (response.status === 401) {
-                    console.log('🔑 Проблема с авторизацией, перенаправление на логин');
-                    window.location.href = '/login';
-                    return;
-                }
-
-                if (response.status === 404) {
-                    console.error('🔍 Маршрут /api/visitors/events/active не найден');
-                    showAlert('error', 'Маршрут для загрузки событий не найден. Проверьте, что сервер обновлен.');
-                    return;
-                }
-
-                throw new Error(`HTTP ${response.status}: ${errorText}`);
-            }
-
-            const data = await response.json();
-            console.log('📊 Полученные данные событий:', data);
-
-            if (!data.events || !Array.isArray(data.events)) {
-                console.error('❌ Неверный формат данных событий:', data);
-                throw new Error('Сервер вернул неверный формат данных событий');
+                throw new Error(data.error);
             }
 
             activeEvents = data.events;
+
+            // Обновляем выпадающий список событий
+            const eventSelect = document.getElementById('event-select');
+            const eventFilter = document.getElementById('event-filter');
+
+            eventSelect.innerHTML = '<option value="">Выберите событие</option>';
+            eventFilter.innerHTML = '<option value="">Все события</option>';
+
+            activeEvents.forEach(event => {
+                const option = new Option(
+                    `${event.name} (${new Date(event.start_date).toLocaleDateString()})`,
+                    event.id
+                );
+                eventSelect.appendChild(option.cloneNode(true));
+                eventFilter.appendChild(option);
+            });
+
             console.log(`✅ Загружено ${activeEvents.length} активных событий`);
 
-            // Обновляем выпадающие списки
-            updateEventSelectors();
-
-            // Показываем информацию пользователю
-            if (activeEvents.length === 0) {
-                showAlert('warning', 'Нет активных событий. Создайте событие в разделе "События".');
-            } else {
-                console.log(`✅ Доступно ${activeEvents.length} событий для выбора`);
-            }
-
         } catch (err) {
-            console.error('❌ Ошибка загрузки активных событий:', err);
-
-            // Детальная диагностика ошибки
-            if (err.message.includes('Failed to fetch') || err.message.includes('NetworkError')) {
-                showAlert('error', 'Ошибка сети. Проверьте подключение к серверу.');
-            } else if (err.message.includes('не найден')) {
-                showAlert('error', 'Функция загрузки событий недоступна. Возможно, сервер не обновлен.');
-            } else {
-                showAlert('error', `Ошибка загрузки событий: ${err.message}`);
-            }
-
-            // Создаем пустой список событий для предотвращения ошибок
+            console.error('Ошибка загрузки активных событий:', err);
             activeEvents = [];
-            updateEventSelectors();
+            showAlert('error', 'Ошибка загрузки списка событий');
         }
     }
 
