--- a/public/index.html
+++ b/public/index.html
@@ -949,19 +949,60 @@
 
     <!-- Администрирование -->
     <div id="admin" class="content">
-        <h3>Управление пользователями</h3>
-        <div id="users-management"></div>
+        <div style="margin-bottom: 20px; display: flex; justify-content: space-between; align-items: center;">
+            <h3>Управление пользователями</h3>
+            <button id="create-user-btn" style="background: linear-gradient(135deg, #28a745, #1e7e34);">➕ Создать пользователя</button>
+        </div>
+
+        <div class="table-container">
+            <div class="table-header">
+                <div class="table-title">Список пользователей</div>
+                <div class="table-count" id="users-count">0 пользователей</div>
+            </div>
+
+            <div id="users-table-content">
+                <div class="loading">
+                    <div class="loading-spinner"></div>
+                    Загрузка пользователей...
+                </div>
+            </div>
+        </div>
+
+        <div class="pagination-section" id="users-pagination-section" style="display: none;">
+            <div class="pagination-info">
+                <div><strong>Показано:</strong> <span id="users-showing">0</span> из <span id="users-total">0</span></div>
+                <div><strong>Страница:</strong> <span id="users-current-page">1</span> из <span id="users-total-pages">1</span></div>
+            </div>
+            <div class="pagination-controls">
+                <div class="page-size-selector">
+                    <label>Показать:</label>
+                    <select id="users-page-size" onchange="changeUsersPageSize()">
+                        <option value="10">10</option>
+                        <option value="25" selected>25</option>
+                        <option value="50">50</option>
+                    </select>
+                </div>
+                <div class="pagination-nav" id="users-pagination-nav">
+                    <!-- Пагинация будет сгенерирована динамически -->
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
 <script>
+    // Глобальные переменные
     let currentUser = null;
     let visitors = [];
     let events = [];
     let activeEvents = [];
+    let users = []; // Добавляем массив пользователей
     let currentPage = 1;
     let pageSize = 25;
     let totalPages = 1;
+    let usersCurrentPage = 1; // Отдельная пагинация для пользователей
+    let usersPageSize = 25;
+    let usersTotalPages = 1;
     let sortField = null;
     let sortDirection = 'asc';
     let qrScanner = null;
@@ -1035,6 +1076,9 @@
 
         // Обработчик создания события
         document.getElementById('create-event-btn').addEventListener('click', showCreateEventForm);
+
+        // Обработчик создания пользователя
+        document.getElementById('create-user-btn').addEventListener('click', showCreateUserForm);
     }
 
     // Проверка авторизации
@@ -1962,31 +2006,391 @@
         }
 
         try {
-            const response = await fetch('/api/admin/users');
+            showLoading('users-table-content');
+
+            const response = await fetch(`/api/admin/users?page=${usersCurrentPage}&limit=${usersPageSize}`);
             const data = await response.json();
 
             if (!response.ok) {
                 throw new Error(data.error);
             }
 
-            renderAdminPanel(data.users);
+            users = data.users;
+            usersCurrentPage = data.pagination.page;
+            usersTotalPages = data.pagination.pages;
+
+            renderUsersTable();
+            updateUsersPagination();
         } catch (err) {
             console.error('Ошибка загрузки админ панели:', err);
-            showAlert('error', 'Ошибка загрузки панели администрирования');
+            document.getElementById('users-table-content').innerHTML = `
+                <div class="empty-state">
+                    <div class="empty-state-icon">❌</div>
+                    <h3>Ошибка загрузки</h3>
+                    <p>${err.message}</p>
+                </div>
+            `;
         }
     }
 
-    function renderAdminPanel(users) {
-        const container = document.getElementById('users-management');
+    function renderUsersTable() {
+        const container = document.getElementById('users-table-content');
 
-        container.innerHTML = `
-            <div style="margin-bottom: 20px;">
-                <button style="background: linear-gradient(135deg, #28a745, #1e7e34);" onclick="showAlert('info', 'Функция в разработке')">➕ Создать пользователя</button>
-            </div>
-            <div class="alert alert-info">
-                Найдено пользователей: ${users.length}
-            </div>
+        document.getElementById('users-count').textContent = `${users.length} пользователей`;
+
+        if (users.length === 0) {
+            container.innerHTML = `
+                <div class="empty-state">
+                    <div class="empty-state-icon">👤</div>
+                    <h3>Пользователи не найдены</h3>
+                    <p>Создайте первого пользователя</p>
+                </div>
+            `;
+            document.getElementById('users-pagination-section').style.display = 'none';
+            return;
+        }
+
+        const tableHtml = `
+            <table class="data-table">
+                <thead>
+                    <tr>
+                        <th>Пользователь</th>
+                        <th>Роль</th>
+                        <th>Email</th>
+                        <th>Статус</th>
+                        <th>Последний вход</th>
+                        <th>Активность</th>
+                        <th>Действия</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    ${users.map(user => `
+                        <tr>
+                            <td>
+                                <div style="font-weight: 600; margin-bottom: 2px;">
+                                    ${user.fullName}
+                                </div>
+                                <div style="font-size: 12px; color: #666;">@${user.username}</div>
+                            </td>
+                            <td>
+                                <span class="status-badge ${getRoleClass(user.role)}">
+                                    ${getRoleText(user.role)}
+                                </span>
+                            </td>
+                            <td>${user.email || 'Не указан'}</td>
+                            <td>
+                                <span class="status-badge status-${user.isActive ? 'active' : 'blocked'}">
+                                    ${user.isActive ? 'Активен' : 'Заблокирован'}
+                                </span>
+                            </td>
+                            <td>
+                                ${user.lastLogin ?
+            `<div>${new Date(user.lastLogin).toLocaleDateString('ru-RU')}</div>
+                                     <div style="font-size: 12px; color: #666;">${new Date(user.lastLogin).toLocaleTimeString('ru-RU')}</div>`
+            : '<span style="color: #666;">Никогда</span>'
+        }
+                            </td>
+                            <td>
+                                <div style="font-weight: 600;">Сессий: ${user.activeSessions || 0}</div>
+                                <div style="font-size: 12px; color: #666;">Сканирований: ${user.scansToday || 0}</div>
+                            </td>
+                            <td>
+                                <div class="actions-cell">
+                                    <button class="btn-action btn-qr" onclick="resetUserPassword(${user.id})" title="Сбросить пароль">
+                                        🔑 Пароль
+                                    </button>
+                                    <button class="btn-action ${user.isActive ? 'btn-block' : 'btn-unblock'}"
+                                            onclick="toggleUserStatus(${user.id}, ${user.isActive})"
+                                            title="${user.isActive ? 'Заблокировать' : 'Разблокировать'}"
+                                            ${user.id === currentUser.id ? 'disabled' : ''}>
+                                        ${user.isActive ? '🔒' : '🔓'}
+                                    </button>
+                                    <button class="btn-action btn-delete" onclick="terminateUserSessions(${user.id})" title="Завершить сессии">
+                                        🚪 Сессии
+                                    </button>
+                                    ${user.id !== currentUser.id ? `
+                                        <button class="btn-action btn-delete" onclick="deleteUser(${user.id})" title="Удалить">
+                                            🗑️
+                                        </button>
+                                    ` : ''}
+                                </div>
+                            </td>
+                        </tr>
+                    `).join('')}
+                </tbody>
+            </table>
         `;
+
+        container.innerHTML = tableHtml;
+        document.getElementById('users-pagination-section').style.display = 'flex';
+    }
+
+    function getRoleClass(role) {
+        const classes = {
+            'admin': 'status-active',
+            'moderator': 'status-blocked',
+            'skd': 'event-badge'
+        };
+        return classes[role] || 'status-blocked';
+    }
+
+    function updateUsersPagination() {
+        document.getElementById('users-current-page').textContent = usersCurrentPage;
+        document.getElementById('users-total-pages').textContent = usersTotalPages;
+
+        const showing = Math.min(usersPageSize, users.length);
+        document.getElementById('users-showing').textContent = showing;
+        document.getElementById('users-total').textContent = users.length;
+
+        renderUsersPaginationNav();
+    }
+
+    function renderUsersPaginationNav() {
+        const nav = document.getElementById('users-pagination-nav');
+        const buttons = [];
+
+        // Кнопка "Первая"
+        buttons.push(`
+            <button class="page-btn" ${usersCurrentPage === 1 ? 'disabled' : ''} onclick="goToUsersPage(1)">
+                ⏮ Первая
+            </button>
+        `);
+
+        // Кнопка "Предыдущая"
+        buttons.push(`
+            <button class="page-btn" ${usersCurrentPage === 1 ? 'disabled' : ''} onclick="goToUsersPage(${usersCurrentPage - 1})">
+                ← Пред
+            </button>
+        `);
+
+        // Номера страниц
+        const start = Math.max(1, usersCurrentPage - 2);
+        const end = Math.min(usersTotalPages, usersCurrentPage + 2);
+
+        for (let i = start; i <= end; i++) {
+            buttons.push(`
+                <button class="page-btn ${i === usersCurrentPage ? 'active' : ''}" onclick="goToUsersPage(${i})">
+                    ${i}
+                </button>
+            `);
+        }
+
+        // Кнопка "Следующая"
+        buttons.push(`
+            <button class="page-btn" ${usersCurrentPage === usersTotalPages ? 'disabled' : ''} onclick="goToUsersPage(${usersCurrentPage + 1})">
+                След →
+            </button>
+        `);
+
+        // Кнопка "Последняя"
+        buttons.push(`
+            <button class="page-btn" ${usersCurrentPage === usersTotalPages ? 'disabled' : ''} onclick="goToUsersPage(${usersTotalPages})">
+                Последняя ⏭
+            </button>
+        `);
+
+        nav.innerHTML = buttons.join('');
+    }
+
+    function goToUsersPage(page) {
+        if (page >= 1 && page <= usersTotalPages && page !== usersCurrentPage) {
+            usersCurrentPage = page;
+            loadAdminPanel();
+        }
+    }
+
+    function changeUsersPageSize() {
+        usersPageSize = parseInt(document.getElementById('users-page-size').value);
+        usersCurrentPage = 1;
+        loadAdminPanel();
+    }
+
+    // Действия с пользователями
+    async function resetUserPassword(userId) {
+        const newPassword = prompt('Введите новый пароль (минимум 6 символов):');
+        if (!newPassword || newPassword.length < 6) {
+            showAlert('error', 'Пароль должен содержать минимум 6 символов');
+            return;
+        }
+
+        try {
+            const response = await fetch(`/api/admin/users/${userId}/reset-password`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ newPassword })
+            });
+
+            const data = await response.json();
+
+            if (response.ok) {
+                showAlert('success', `Пароль для пользователя ${data.username} успешно сброшен`);
+            } else {
+                showAlert('error', data.error);
+            }
+        } catch (err) {
+            showAlert('error', 'Ошибка сброса пароля');
+        }
+    }
+
+    async function toggleUserStatus(userId, isActive) {
+        if (userId === currentUser.id) {
+            showAlert('error', 'Нельзя изменить статус собственной учетной записи');
+            return;
+        }
+
+        const action = isActive ? 'заблокировать' : 'разблокировать';
+        if (!confirm(`Вы уверены, что хотите ${action} этого пользователя?`)) {
+            return;
+        }
+
+        try {
+            const response = await fetch(`/api/admin/users/${userId}`, {
+                method: 'PUT',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ isActive: !isActive })
+            });
+
+            const data = await response.json();
+
+            if (response.ok) {
+                showAlert('success', data.message);
+                loadAdminPanel();
+            } else {
+                showAlert('error', data.error);
+            }
+        } catch (err) {
+            showAlert('error', 'Ошибка изменения статуса пользователя');
+        }
+    }
+
+    async function terminateUserSessions(userId) {
+        if (!confirm('Завершить все сессии этого пользователя?')) {
+            return;
+        }
+
+        try {
+            const response = await fetch(`/api/admin/users/${userId}/terminate-sessions`, {
+                method: 'POST'
+            });
+
+            const data = await response.json();
+
+            if (response.ok) {
+                showAlert('success', `Завершено сессий: ${data.terminatedSessions}`);
+                loadAdminPanel();
+            } else {
+                showAlert('error', data.error);
+            }
+        } catch (err) {
+            showAlert('error', 'Ошибка завершения сессий');
+        }
+    }
+
+    async function deleteUser(userId) {
+        if (userId === currentUser.id) {
+            showAlert('error', 'Нельзя удалить собственную учетную запись');
+            return;
+        }
+
+        if (!confirm('Вы уверены, что хотите удалить этого пользователя?\n\nЭто действие нельзя отменить!')) {
+            return;
+        }
+
+        try {
+            const response = await fetch(`/api/admin/users/${userId}`, {
+                method: 'DELETE'
+            });
+
+            const data = await response.json();
+
+            if (response.ok) {
+                showAlert('success', `Пользователь ${data.username} удален`);
+                loadAdminPanel();
+            } else {
+                showAlert('error', data.error);
+            }
+        } catch (err) {
+            showAlert('error', 'Ошибка удаления пользователя');
+        }
+    }
+
+    function showCreateUserForm() {
+        const formHtml = `
+            <div id="create-user-modal" style="position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.5); z-index: 1000; display: flex; align-items: center; justify-content: center;">
+                <div style="background: white; padding: 30px; border-radius: 12px; width: 90%; max-width: 500px; max-height: 90vh; overflow-y: auto;">
+                    <h3 style="margin-bottom: 20px; color: #333;">Создание пользователя</h3>
+                    <form id="create-user-form">
+                        <div class="form-group">
+                            <label>Логин *</label>
+                            <input type="text" name="username" required minlength="3" maxlength="50" pattern="^[a-zA-Z0-9_]+$">
+                            <small style="color: #666;">Только буквы, цифры и подчеркивание</small>
+                        </div>
+                        <div class="form-group">
+                            <label>Пароль *</label>
+                            <input type="password" name="password" required minlength="6">
+                        </div>
+                        <div class="form-group">
+                            <label>Полное имя *</label>
+                            <input type="text" name="fullName" required minlength="2" maxlength="100">
+                        </div>
+                        <div class="form-group">
+                            <label>Роль *</label>
+                            <select name="role" required>
+                                <option value="">Выберите роль</option>
+                                <option value="moderator">Модератор</option>
+                                <option value="skd">СКД</option>
+                                <option value="admin">Администратор</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>Email</label>
+                            <input type="email" name="email">
+                        </div>
+                        <div style="display: flex; gap: 10px; margin-top: 20px;">
+                            <button type="submit">Создать</button>
+                            <button type="button" style="background: linear-gradient(135deg, #6c757d, #545b62);" onclick="closeCreateUserForm()">Отмена</button>
+                        </div>
+                    </form>
+                </div>
+            </div>`;
+
+        document.body.insertAdjacentHTML('beforeend', formHtml);
+
+        document.getElementById('create-user-form').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const formData = new FormData(e.target);
+            const userData = Object.fromEntries(formData);
+
+            try {
+                const response = await fetch('/api/admin/users', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(userData)
+                });
+
+                const data = await response.json();
+
+                if (response.ok) {
+                    showAlert('success', 'Пользователь создан успешно');
+                    closeCreateUserForm();
+                    loadAdminPanel();
+                } else {
+                    if (data.details && Array.isArray(data.details)) {
+                        const errors = data.details.map(detail => detail.msg).join(', ');
+                        showAlert('error', `${data.error}: ${errors}`);
+                    } else {
+                        showAlert('error', data.error);
+                    }
+                }
+            } catch (err) {
+                showAlert('error', 'Ошибка создания пользователя');
+            }
+        });
+    }
+
+    function closeCreateUserForm() {
+        const modal = document.getElementById('create-user-modal');
+        if (modal) modal.remove();
     }
 
     // Сканер QR кодов
